example for memory leaks detection has been added jxray HeapDump analyzer